// Copyright 2021 Silent Eight Pte. Ltd.

syntax = "proto3";

package silenteight.proto.payments.bridge.internal.v1.event;

import "google/api/field_behavior.proto";

option java_multiple_files = true;
option java_outer_classname = "ResponseCompletedProto";
option java_package = "com.silenteight.proto.payments.bridge.internal.v1.event";

message ResponseCompleted {
  // The name of the alert message to accept for processing, in form of
  // `alerts/<UUID>`.
  string alert = 1 [(google.api.field_behavior) = REQUIRED];

  //
  // `alerts/<uuid>/status/<string>`
  string status = 2 [(google.api.field_behavior) = REQUIRED];

  // The id of the recommendation to be sent back to requesting party
  // `alerts/<uuid>/recommendations/<UUID>`
  string recommendation = 3 [(google.api.field_behavior) = REQUIRED];

}
